2016-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated as repo now has a more manageable footprint

2016-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* local/scripts/git-remove.sh: Script contributed in GitHub Issue #34
	to reduce disk footprint of the archive

2016-11-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 1.62.0-1

	* inst/include/boost/variant/detail/forced_return.hpp: Ensure
	R_NO_REMAP is defined

2016-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/boost/variant/detail/forced_return.hpp
	(forced_return_no_return): Call Rf_error() not abort()

2016-11-13  Dirk Eddelbuettel  <edd@debian.org>

	* local/scripts/CreateBoost.sh: Added Boost.PropertyTree (cf #29),
	Boost.ScopeExit (cf #30) and (belatedly) formally added Boost.Atomic

	* numeric/odeint/stepper/generation/: As before rename
	karp54_classic.hpp to karp54_cl.hpp and adjust generation.hpp

2016-06-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description): s/type_trains/type_traits/
	* local/scripts/CreateBoost.sh (boostlibs): Ditto

2016-06-04  Evelyn Mitchell <efm-github@linsomniac.com>

	* README.md: Correct typo via s/type_trains/type_traits/

2016-05-06  Dirk Eddelbuettel  <edd@debian.org>

	* local/scripts/CreateBoost.sh: Added Boost.Flyweight (cf #26)
	* inst/include/boost/flyweight/: Ditto

	* numeric/odeint/stepper/generation/: As before rename
	karp54_classic.hpp to karp54_cl.hpp and adjust generation.hpp

2016-05-04  Jay Hesselberth  <jay.hesselberth@gmail.com>

	* local/scripts/CreateBoost.sh: Added Boost.ICL (cf #27)
	* inst/include/boost/icl/: Ditto

2016-04-06  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use canonical CRAN URL

2016-02-25  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Mention bimap; add note about massive repo size

2016-02-20  Jim Hester <james.f.hester@gmail.com>

	* local/scripts/CreateBoost.sh: Added Boost.Bimap (cf #24)
	* inst/include/boost/bimap: Ditto
